[gd_scene load_steps=7 format=3 uid="uid://hw22ff6yb3bg"]

[ext_resource type="Script" uid="uid://bf8rddmfu7htc" path="res://script/apple_tree.gd" id="1_66v30"]
[ext_resource type="Texture2D" uid="uid://cjlv5qumx6nre" path="res://art/Puny-Characters/Environment/survivalgame-appletree.png" id="1_qoswj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6ct54"]
atlas = ExtResource("1_qoswj")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd18b"]
atlas = ExtResource("1_qoswj")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_fsq47"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ct54")
}],
"loop": true,
"name": &"apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd18b")
}],
"loop": true,
"name": &"noapples",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yvhoj"]
radius = 22.0227

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_66v30")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fsq47")
animation = &"apples"

[node name="pickapple_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickapple_area"]
shape = SubResource("CircleShape2D_yvhoj")

[node name="growth_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="pickapple_area" to="." method="_on_pickapple_area_body_entered"]
[connection signal="body_exited" from="pickapple_area" to="." method="_on_pickapple_area_body_exited"]
[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]
